-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0 Beta2
-
None
-
f64d8caeafe2c8952e6ad24ba13e87d1daf20ac8 (qt/qtwebengine/dev) f81571f1af5efae6f7e2d8c7ce790b65eb606b47 (qt/qtwebengine/6.2)
Since updating from September to October SHA1s, the CI fails to run on the Windows configuration with sandbox active.
This should be investigated and the workaround removed.
For Gerrit Dashboard: QTBUG-88105 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
346640,5 | Try re-enabling sandbox on Windows | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
356428,2 | Try re-enabling sandbox on Windows | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |