Try re-enabling sandbox on Windows

Pick-to: 6.2
Fixes: QTBUG-88105
Change-Id: Ib694736996d6abb6b43f0cf7a5ba010bef76fe33
Reviewed-by: Michal Klocek <michal.klocek@qt.io>