src/core/web_engine_context.cpp
@@ -684,9 +684,6 @@ WebEngineContext::WebEngineContext()
 
     // Enable sandboxing on OS X and Linux (Desktop / Embedded) by default.
     bool disable_sandbox = qEnvironmentVariableIsSet(kDisableSandboxEnv);
-#if defined(Q_OS_WIN)
-    disable_sandbox = true; // FIXME: Windows sandbox no longer works on CI, but works fine locally.
-#endif
     if (!disable_sandbox) {
 #if defined(Q_OS_LINUX)
         parsedCommandLine->AppendSwitch(sandbox::policy::switches::kDisableSetuidSandbox);
